# my_fastapi_template

./: Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yaml  env.example  pyproject.toml  setup.cfg
src/: main.py  settings.py
src/admin/: auth.py  generations.py  users.py  utils.py
src/auth/: dao.py  models.py  router.py  schema.py  service.py
src/core/: base_dao.py  dependencies.py  engine.py  exceptions.py  file_manage.py  http_mixin.py  models.py  s3_client.py  schema.py  session.py  sessions.py
src/emails/: service.py
src/emails/templates/: verification_template.html
src/migrations/: env.py
src/migrations/versions/: 2025_03_18_2146-4093ca2c97bc_.py  2025_03_19_2221-07bddecd5cd8_.py  2025_03_31_1212-ec08b798e787_.py  2025_04_01_1657-e22243ac3a46_.py  2025_04_02_2212-d920ce3c5070_.py
src/users/: dao.py  models.py  router.py  schema.py
src/utils/: constants.py
tests/: conftest.py
tests/test_auth/: test_auth.py
